--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,3 +5,13 @@
 body{
     font-family: 'Poppins', sans-serif;
 }
+
+.half-width{
+    width: 40%;
+    float: left;
+    margin-left: 5%;
+    padding: 2%;
+}
+.half-width img{
+    width: 100%;
+}
