--- a/stylesheet.css
+++ b/stylesheet.css
@@ -24,3 +24,14 @@ body{
 section {
     height: 500px;
 }
+
+.link-button{
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 20px;
+    border-radius: 5px;
+    color: white;
+    font-weight: bold;
+
+
+}
