--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,6 +6,12 @@ body{
     margin: 0px;
     font-family: 'Poppins', sans-serif;
 }
+h1{
+    font-size: 50px;
+}
+h2{
+    font-size: 40px;
+}
 
 .half-width{
     width: 40%;
@@ -23,6 +29,7 @@ body{
 
 section {
     height: 500px;
+    padding-bottom: 150px;
 }
 
 .link-button{
@@ -33,5 +40,12 @@ section {
     color: white;
     font-weight: bold;
 
+
+}
+
+.dream-project{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
 
 }
