--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,3 +49,28 @@ section {
     background-position: right;
 
 }
+
+.bottom-chapter-Experience{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+
+.box-shadow{
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height: 65%;
+}
+
+#left-box{
+    border-left: 7px solid;
+    border-image:linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+
+#right-box{
+    border-left: 7px solid ;
+    border-image:linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
